@@ -1,3 +1,10 @@
+2003-04-25  Dennis Cranston <dennis_cranston at yahoo com>
+
+	*gweather-pref.c: Minor HIG changes to the preference dialog: 
+	add missing mnemonic; add missing colon from label; add units 
+	after spin controls; remove dialog separator, set the default 
+	button; and fix widget padding.
+
 2003-04-22  Kevin Vandersloot <kfv101@psu.edu>
 
 	* gweather-pref.c: fix saving of update interval. Also limit minimun update interval
